[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/girlMenuSprites/backToMenu.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/girlMenuSprites/pausePanel.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/girlMenuSprites/backToGame.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/girlMenuSprites/reloadButton.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/girlMenuSprites/tutorialButton.png" type="Texture" id=5]
[ext_resource path="res://Scenes/girlScenes/girlExercisesSample.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/girlMenu.gd" type="Script" id=7]

[node name="girlExerciseSample" instance=ExtResource( 6 )]
pause_mode = 2
script = ExtResource( 7 )

[node name="exercisePopup2" parent="." index="2"]
visible = true
texture = ExtResource( 2 )

[node name="tutorialButton" type="Button" parent="exercisePopup2" index="0"]
margin_left = 69.8865
margin_top = 228.0
margin_right = 463.887
margin_bottom = 301.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonSprite" type="Sprite" parent="exercisePopup2/tutorialButton" index="0"]
position = Vector2( 199.198, 201.428 )
texture = ExtResource( 5 )

[node name="reloadButton" type="Button" parent="exercisePopup2" index="1"]
margin_left = 72.454
margin_top = 361.062
margin_right = 464.454
margin_bottom = 427.062
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonSprite" type="Sprite" parent="exercisePopup2/reloadButton" index="0"]
position = Vector2( 197.667, 83.194 )
texture = ExtResource( 4 )

[node name="backToMenu" type="Button" parent="exercisePopup2" index="2"]
margin_left = 74.0
margin_top = 468.122
margin_right = 465.0
margin_bottom = 535.122
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonSprite" type="Sprite" parent="exercisePopup2/backToMenu" index="0"]
position = Vector2( 195.974, -26.7237 )
texture = ExtResource( 1 )

[node name="backToGameButton" parent="exercisePopup2" index="3"]
margin_left = -189.546
margin_top = 103.752
margin_right = 192.454
margin_bottom = 178.752

[node name="buttonSprite" parent="exercisePopup2/backToGameButton" index="0"]
position = Vector2( 189.423, -134.555 )
texture = ExtResource( 3 )

[node name="blackBox" parent="exercisePopup2" index="4"]
margin_left = -223.0
margin_top = -241.0
margin_right = 307.0
margin_bottom = 238.0
[connection signal="pressed" from="exercisePopup2/tutorialButton" to="." method="onTutorialButtonPressed"]
[connection signal="pressed" from="exercisePopup2/reloadButton" to="." method="onReloadButtonPressed"]
[connection signal="pressed" from="exercisePopup2/backToMenu" to="." method="onBackToMenuPressed"]
